// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Wrapper.svelte > should render using default props 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical "
  />
</div>
`;

exports[`Wrapper.svelte > should render using specified class 1`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical custom-class"
  />
</div>
`;

exports[`Wrapper.svelte > should render using specified class 2`] = `
<div>
  <field-layout
    aria-label=""
    class="vertical custom-class-2"
  />
</div>
`;

exports[`Wrapper.svelte > should render using specified type 1`] = `
<div>
  <field-layout
    aria-label=""
    class="horizontal "
  />
</div>
`;

exports[`Wrapper.svelte > should render using specified type 2`] = `
<div>
  <field-layout
    aria-label=""
    class="section "
  />
</div>
`;
